--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,22 @@
+.container-1 {
+    border: 1px solid black;
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+}
+
 .flex-box-container-1 {
-    border: 1px, solid, black;
+    display: flex;
+    border: 1px solid black;
+    padding: 18px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.flex-box-container-1 div {
+    display: flex;
+    padding: 18px;
+    border: 1px solid black;
+    align-items: center;
 }
